// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link Component Link renders external link with tooltip 1`] = `
<div>
  <div
    class="gds-link-container"
  >
    <a
      href="http://www.link.com"
      rel="noreferrer"
      target="_blank"
    >
      <span>
        TEXT
      </span>
      <div>
        <div
          class="gds-tooltip bottom"
          style="left: -99999px; top: -99999px; opacity: 0;"
        >
          <div
            class="tooltip-arrow"
          />
          <div
            class="tooltip-label"
          >
            TOOLTIP
          </div>
        </div>
      </div>
    </a>
    <i
      class="icon"
      icon="fal,external-link"
    />
  </div>
</div>
`;

exports[`Link Component Link renders internal link 1`] = `
<div>
  <div
    class="gds-link-container"
  >
    <a
      href="/link"
    >
      TEXT
    </a>
  </div>
</div>
`;
